<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/read_dialog_bg"
    android:padding="10dp"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_simulation"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/page_mode_simulation" />
        <TextView
            android:id="@+id/tv_cover"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/page_mode_cover" />
        <TextView
            android:id="@+id/tv_slide"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/page_mode_slide" />
        <TextView
            android:id="@+id/tv_none"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/page_mode_none" />
    </LinearLayout>
</LinearLayout>