<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/read_dialog_bg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_dark"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            />

        <SeekBar
            android:id="@+id/sb_brightness"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:max="100"
            android:layout_gravity="center_vertical">
        </SeekBar>

        <TextView
            android:id="@+id/tv_bright"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/setting_bright"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            />
        
        <TextView
            android:id="@+id/tv_xitong"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:text="@string/setting_system" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_subtract"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@null"
            android:textColor="@color/read_dialog_button_select"
            android:text="@string/setting_subtract" />
        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="64" />

        <TextView
            android:id="@+id/tv_add"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@null"
            android:textColor="@color/read_dialog_button_select"
            android:text="@string/setting_add" />

        <TextView
            android:id="@+id/tv_size_default"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="20dp"
            android:text="@string/setting_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_default"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/font_default" />
        <TextView
            android:id="@+id/tv_qihei"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/font_qihei" />
        <TextView
            android:id="@+id/tv_fzxinghei"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/font_fzxinghei"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_fzkatong"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/font_fzkatong" />
        <TextView
            android:id="@+id/tv_bysong"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:text="@string/font_bysong" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <com.zijie.treader.view.CircleImageView
            android:id="@+id/iv_bg_default"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_default" />

        <com.zijie.treader.view.CircleImageView
            android:id="@+id/iv_bg_1"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_1" />

        <com.zijie.treader.view.CircleImageView
            android:id="@+id/iv_bg_2"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_2" />

        <com.zijie.treader.view.CircleImageView
            android:id="@+id/iv_bg_3"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_3" />

        <com.zijie.treader.view.CircleImageView
            android:id="@+id/iv_bg_4"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_4" />
    </LinearLayout>
</LinearLayout>