<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book_pop"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/tmall_bar_bg"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/return_button"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">
            <!--    android:gravity　属性是对该view中内容的限定．比如一个button 上面的text. 你可以设置该text 相对于view的靠左，靠右等位置．
android:layout_gravity是用来设置该view相对与父view 的位置．比如一个button 在linearlayout里，你想把该button放在linearlayout里靠左、靠右等位置就可以通过该属性设置．
即android:gravity用于设置View中内容相对于View组件的对齐方式，而android:layout_gravity用于设置View组件相对于Container的对齐方式。
当Linear Layout为水平时，可以设置上下  当Linear Layout为垂直时，可以设置左右      -->
            <ImageButton
                android:id="@+id/btn_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/black" />

            <ImageButton
                android:id="@+id/btn_listener_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:background="@mipmap/img_tts" />
        </LinearLayout>
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bookpop_bottom"
        android:layout_below="@+id/linearLayout">
        <TextView
            android:id="@+id/tv_blank"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/rl_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:background="@color/black"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="00.00%"/>
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookpop_bottom"
        android:baselineAligned="false"
        android:background="@drawable/tmall_bar_bg"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_pre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/read_setting_pre"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                />

            <SeekBar
                android:id="@+id/sb_progress"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:max="10000"
                android:layout_gravity="center_vertical">
            </SeekBar>

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/read_setting_next"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/text_style"
            android:id="@+id/tv_directory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/reader_text_size"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/read_setting_directory" />

        <TextView
            style="@style/text_style"
            android:id="@+id/tv_dayornight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/reader_screen_brightness"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/read_setting_night" />

        <TextView
            style="@style/text_style"
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/reader_bookmark_operation"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/read_setting_set" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
