<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">

    <com.zijie.treader.view.PageWidget
        android:id="@+id/bookpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/ll_status"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:fitsSystemWindows="true"-->
            <!--android:orientation="vertical"-->
            <!--android:visibility="invisible">-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:id="@+id/ll_top"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_below="@id/ll_status"-->
            <!--android:visibility="gone">-->

            <!--<ImageButton-->
                <!--android:id="@+id/btn_return"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@mipmap/return_button"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_gravity="center_vertical" />-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="right"-->
                <!--android:orientation="horizontal">-->
                <!--<ImageButton-->
                    <!--android:id="@+id/btn_light"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:background="@color/black" />-->

                <!--<ImageButton-->
                    <!--android:id="@+id/btn_listener_book"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:background="@mipmap/img_tts" />-->
            <!--</LinearLayout>-->
        <!--</LinearLayout>-->

    <RelativeLayout
        android:id="@+id/rl_read_bottom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/read_dialog_bg"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_stop_read"
            style="@style/setting_dialog_button"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:text="停止语音播放" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:background="?attr/colorPrimary"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="00.00%"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bookpop_bottom"
                android:baselineAligned="false"
                android:background="@color/read_dialog_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_pre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/read_setting_pre"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />

                    <SeekBar
                        android:id="@+id/sb_progress"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:max="10000"
                        android:layout_gravity="center_vertical">
                    </SeekBar>

                    <TextView
                        android:id="@+id/tv_next"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/read_setting_next"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_directory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/directory"
                        android:gravity="center"
                        android:text="@string/read_setting_directory" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_dayornight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/dayornight"
                        android:gravity="center"
                        android:text="@string/read_setting_night" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_pagemode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/pagemode"
                        android:gravity="center"
                        android:text="@string/read_setting_pagemode" />

                    <TextView
                        style="@style/text_style"
                        android:id="@+id/tv_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/setting"
                        android:gravity="center"
                        android:text="@string/read_setting_set" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
